--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "crowdin-upload": "crowdin --config ../crowdin.yaml upload sources --auto-update -b master",
     "crowdin-download": "crowdin --config ../crowdin.yaml download -b master",
     "examples": "docusaurus-examples",
+    "prebuild":"node prebuild.js docs/api/",
+    "prestart":"node prebuild.js docs/api/",
+    "prestart_watch":"node prebuild.js docs/api/",
     "start": "docusaurus start",
     "start_watch": "doc_preprocess --settings_type='start_watch'",
     "syntaxViewPro": "doc_preprocess --settings_type='build_syntax_viewPro' && doc_preprocess --settings_type='build_syntax_viewPro_translated'",
