--- a/docs/preprocessing.conf
+++ b/docs/preprocessing.conf
@@ -27,6 +27,8 @@
 <!-- REF #FileHandleClass._alias_-->FileHandle<!-- END REF -->
 <!-- REF #WebSocketServerClass._alias_-->WebSocketServer<!-- END REF -->
 <!-- REF #WebSocketConnectionClass._alias_-->WebSocketConnection<!-- END REF -->
+<!-- REF #WebFormClass._alias_-->WebForm<!-- END REF -->
+<!-- REF #WebFormItemClass._alias_-->WebFormItem<!-- END REF -->
 
 
 
