--- a/docs/preprocessing.conf
+++ b/docs/preprocessing.conf
@@ -3,6 +3,7 @@
 <!-- REF #IMAPTransporterClass._alias_-->IMAPTransporter<!-- END REF -->
 <!-- REF #SMTPTransporterClass._alias_-->SMTPTransporter<!-- END REF -->
 <!-- REF #MailAttachmentClass._alias_-->MailAttachment<!-- END REF -->
+<!-- REF #EmailObjectClass._alias_-->Email<!-- END REF -->
 <!-- REF #FileClass._alias_-->File<!-- END REF -->
 <!-- REF #ZipFileClass._alias_-->ZipFile<!-- END REF -->
 <!-- REF #ZipFolderClass._alias_-->ZipFolder<!-- END REF -->
@@ -25,6 +26,7 @@
 <!-- REF #WebServerClass._alias_-->WebServer<!-- END REF -->
 <!-- REF #HTTPRequestClass._alias_-->HTTPRequest<!-- END REF -->
 <!-- REF #FileHandleClass._alias_-->FileHandle<!-- END REF -->
+<!-- REF #WebSocketClass._alias_-->WebSocket<!-- END REF -->
 <!-- REF #WebSocketServerClass._alias_-->WebSocketServer<!-- END REF -->
 <!-- REF #WebSocketConnectionClass._alias_-->WebSocketConnection<!-- END REF -->
 <!-- REF #WebFormClass._alias_-->WebForm<!-- END REF -->
